--- a/Windows Terminal/settings.json
+++ b/Windows Terminal/settings.json
@@ -46,20 +46,6 @@
                 "hidden": true
             },
             {
-                // Make changes here to the cmd.exe profile.
-                "guid": "{0caa0dad-35be-5f56-a8ff-afceeeaa6101}",
-                "hidden": false,
-                "name": "CMD",
-                "commandline": "cmd.exe",
-                "fontSize": 10,
-                "fontWeight": "medium",
-                "fontFace": "Cascadia Code PL",
-                "foreground": "#1eff00",
-                "cursorShape": "vintage",
-                "useAcrylic": true,
-                "acrylicOpacity": 0.6
-            },
-            {
                 // Make changes here to the powershell 7
                 "guid": "{574e775e-4f2a-5b96-ac1e-a2962a402336}",
                 "hidden": false,
@@ -73,22 +59,37 @@
                 "acrylicOpacity": 0.6,
                 "colorScheme": "power"
             },
+            {
+                // Make changes here to the cmd.exe profile.
+                "guid": "{0caa0dad-35be-5f56-a8ff-afceeeaa6101}",
+                "name": "Símbolo del sistema",
+                "commandline": "cmd.exe",
+                "hidden": false,
+                "fontSize": 10,
+                "fontWeight": "medium",
+                "fontFace": "Cascadia Code PL",
+                "background": "#f0f0f0",
+                "foreground": "#007FFF",
+                "cursorShape": "vintage",
+                "useAcrylic": true,
+                "acrylicOpacity": 0.1
+            },
             {   
                 //Make changes here to the Azure CLI profile.
                 "guid": "{b453ae62-4e3d-5e58-b989-0a998ec441b8}",
-                "hidden": true,
+                "hidden": false,
                 "name": "Azure Cloud Shell",
                 "source": "Windows.Terminal.Azure",
                 "fontSize": 10,
                 "fontWeight": "medium",
                 "fontFace": "Cascadia Code PL",
-                "foreground": "#86b9e2",
+                "foreground": "#007FFF",
                 "cursorShape": "vintage",
                 "useAcrylic": true,
                 "acrylicOpacity": 0.6
             },
             {   
-                //Make changes here to the Ubuntu 20.04 profile.
+                //Make changes here to the Ubuntu 20.04 Profile
                 "guid": "{07b52e3e-de2c-5db4-bd2d-ba144ed6c273}",
                 "hidden": false,
                 "name": "Ubuntu-20.04",
@@ -101,6 +102,21 @@
                 "acrylicOpacity": 0.6,
                 "colorScheme": "ubuntu",
                 "icon": "ms-appdata:///roaming/pngocean.com(ubu).png"
+            },
+            {
+                //Make changes here to the Debian Buster Profile
+                "guid": "{58ad8b0c-3ef8-5f4d-bc6f-13e4c00f2530}",
+                "hidden": false,
+                "name": "Debian",
+                "source": "Windows.Terminal.Wsl",
+                "fontSize": 10,
+                "fontWeight": "medium",
+                "fontFace": "DroidSansMono Nerd Font",
+                "cursorShape": "vintage",
+                "useAcrylic": true,
+                "acrylicOpacity": 0.6,
+                "colorScheme": "deb",
+                "icon": "ms-appdata:///roaming/pngocean.com(deb).png"
             },
             {   
                 //Make changes here to the Kali profile.
@@ -125,67 +141,88 @@
     // To learn more about color schemes, visit https://aka.ms/terminal-color-schemes
     "schemes": [
         {
-            "name" : "ubuntu",
-            "background" : "#000000",
+        "name" : "power",
+        "background" : "#f0f0f0",
+        "black" : "#000000",
+        "blue" : "#007FFF",
+        "brightBlack" : "#5A6374",
+        "brightBlue" : "#007FFF",
+        "brightCyan" : "#007FFF",
+        "brightGreen" : "#0eca2d",
+        "brightPurple" : "#C678DD",
+        "brightRed" : "#E06C75",
+        "brightWhite" : "#000000",
+        "brightYellow" : "#000000",
+        "cyan" : "#0eca2d",
+        "foreground" : "#000000",
+        "green" : "#0eca2d",
+        "purple" : "#c7ec21",
+        "red" : "#E06C75",
+        "white" : "#e2e2e2",
+        "yellow" : "#0eca2d"
+        },
+        {
+        "name" : "ubuntu",
+        "background" : "#f0f0f0",
+        "black" : "#000000",
+        "blue" : "#6b6b6b",
+        "brightBlack" : "#8a8a8a",
+        "brightBlue" : "#8a8a8a",
+        "brightCyan" : "#5A6374",
+        "brightGreen" : "#ff5100",
+        "brightPurple" : "#C678DD",
+        "brightRed" : "#ff5100",
+        "brightWhite" : "#cfcccc",
+        "brightYellow" : "#ffffff",
+        "cyan" : "#000000",
+        "foreground" : "#000000",
+        "green" : "#f56d2e",
+        "purple" : "#f56d2e",
+        "red" : "#f56d2e",
+        "white" : "#cfcccc",
+        "yellow" : "#f56d2e"            
+        },
+        {
+            "name" : "deb",
+            "background" : "#f0f0f0",
             "black" : "#000000",
-            "blue" : "#6b6b6b",
-            "brightBlack" : "#5A6374",
-            "brightBlue" : "#8a8a8a",
-            "brightCyan" : "#f56d2e",
-            "brightGreen" : "#f56d2e",
-            "brightPurple" : "#C678DD",
-            "brightRed" : "#f56d2e",
-            "brightWhite" : "#e2e2e2",
-            "brightYellow" : "#333333",
-            "cyan" : "#56B6C2",
-            "foreground" : "#e2e2e2",
-            "green" : "#56e1f3",
-            "purple" : "#f56d2e",
-            "red" : "#f56d2e",
-            "white" : "#e2e2e2",
-            "yellow" : "#f56d2e"
+            "blue" : "#a70404",
+            "brightBlack" : "#a70404",
+            "brightBlue" : "#a70404",
+            "brightCyan" : "#000000",
+            "brightGreen" : "#000000",
+            "brightPurple" : "#000000",
+            "brightRed" : "#000000",
+            "brightWhite" : "#000000",
+            "brightYellow" : "#a70404",
+            "cyan" : "#ffffff",
+            "foreground" : "#000000",
+            "green" : "#ffffff",
+            "purple" : "#000000",
+            "red" : "#a70404",
+            "white" : "#000000",
+            "yellow" : "#a70404"
         },
         {
             "name" : "kali",
-            "background" : "#000000",
+            "background" : "#f0f0f0",
             "black" : "#000000",
-            "blue" : "#56B6C2",
+            "blue" : "#5A6374",
             "brightBlack" : "#5A6374",
-            "brightBlue" : "#56B6C2",
-            "brightCyan" : "#56B6C2",
-            "brightGreen" : "#56e1f3",
+            "brightBlue" : "#3dccdf",
+            "brightCyan" : "#3dccdf",
+            "brightGreen" : "#5A6374",
             "brightPurple" : "#C678DD",
             "brightRed" : "#E06C75",
             "brightWhite" : "#e2e2e2",
-            "brightYellow" : "#56B6C2",
-            "cyan" : "#56B6C2",
-            "foreground" : "#e2e2e2",
-            "green" : "#56e1f3",
+            "brightYellow" : "#3dccdf",
+            "cyan" : "#3dccdf",
+            "foreground" : "#000000",
+            "green" : "#3dccdf",
             "purple" : "#C678DD",
             "red" : "#E06C75",
             "white" : "#e2e2e2",
-            "yellow" : "#56e1f3"
-        },
-        {
-            "name" : "power",
-            "background" : "#000000",
-            "black" : "#000000",
-            "blue" : "#007FFF",
-            "brightBlack" : "#5A6374",
-            "brightBlue" : "#007FFF",
-            "brightCyan" : "#007FFF",
-            "brightGreen" : "#0eca8b",
-            "brightPurple" : "#C678DD",
-            "brightRed" : "#E06C75",
-            "brightWhite" : "#e2e2e2",
-            "brightYellow" : "#ffffff",
-            "cyan" : "#0eca8b",
-            "foreground" : "#ffffff",
-            "green" : "#0eca8b",
-            "purple" : "#C678DD",
-            "red" : "#E06C75",
-            "white" : "#e2e2e2",
-            "yellow" : "#0eca8b"
+            "yellow" : "#3dccdf"
         },
     ],
 
